@@ -492,7 +492,7 @@ OP_VetClaimRequest=0x7503
 OP_VetClaimReply=0x01e1
 OP_PlayMP3=0x0000			#
 OP_ReclaimCrystals=0x0000		#
-OP_CrystalCountUpdate=0x0000		#
+OP_CrystalCountUpdate=0x64C1		#
 OP_DynamicWall=0x0000			#
 OP_OpenDiscordMerchant=0x0000		#
 OP_DiscordMerchantInventory=0x0000	#
