@@ -466,7 +466,7 @@ OP_FriendsWho=0x48fe
 OP_MoveLogRequest=0x7510		#gone I think
 OP_MoveLogDisregard=0x0000		#gone I think
 OP_ReclaimCrystals=0x7cfe
-OP_CrystalCountUpdate=0x0000
+OP_CrystalCountUpdate=0x0ce3
 OP_DynamicWall=0x0000
 OP_CustomTitles=0x2a28			# ShowEQ 10/27/05
 OP_NewTitlesAvailable=0x4eca		#
